<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UserDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layoutstyle"
            android:padding="60dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/bank" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:text="Ahmed Hosny" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Ahmedhosny6688@gmail.com" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="-40dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/mobile"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/mobile"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/mobile_data"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="+912345678901" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/ifsc"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/ifsc_code"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ifsc_code"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="9123 4567 8901" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/account_no."
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/account_no"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/account_no_data"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="912345678901" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/bank_balance"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/balance"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_rs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/rs"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bank_balance_data"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        tools:text="5000" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/transfer"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/transfer"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</ScrollView>